# Squishy-Particle-Simulator

./: README.md
python/: CMakeLists.txt  README.md
python/ClaudeArchive/memory/: project_alpha_damp_calibration.md  project_dataset_status.md  project_ellipse_particle.md  project_scaling_laws.md  project_test_F_hopper.md
python/ClaudeArchive/root_markdowns/: CAPSULE_SHELL.md  FUTURE_DIRECTIONS.md  HANDOFF.md  LOG.md  VALIDATION.md
python/notebooks/: getting_started.ipynb  reproduce_paper.ipynb
python/papers/summary_of_methods/: main.tex  supplement.tex
python/results/calibration_sweep/: calibration_data.json
python/src/contact/: extract.py
python/src/cpp/: candidacy_manager.hpp
python/src/epd/: motion.py  objects.py  particles.py  system.py
python/src/simulation/: capsule_shell.py  contact_forces_py.py  contact_primitives.py  rcp_utils.py  render_utils.py  tf_sim.py  two_disk.py
python/src/validation/: R0_spot_check.py  calibration_sweep.py  contact_law_fd.py  emulsion_benchmarks.py  fixed_b_q_sweep.py  insert_calib_results.py  plot_fd_with_fits.py  replot_calibration.py  test_A_elastic_tf.py  test_A_elastic_tf_fast.py  test_A_emulsion_api.py  test_A_emulsion_tf_fast.py  test_B1_seed.py  test_B2_emulsion.py  test_C_couette.py  test_C_couette_shear.py  test_C_couette_shear_emulsion.py  test_D_elastic.py  test_F_hopper.py
python/src/visualization/: ellipse_collision_movies.py  rb_collision_movie.py  rb_extension_movies.py
python_v2/: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF.md  PLAN.md  README.md  VISION.md  pyproject.toml  requirements.txt
python_v2/ClaudeArchive/: README.md
python_v2/ClaudeArchive/docs/: model_and_numerics.md  rigid_body_integration_benchmark.md
python_v2/ClaudeArchive/memory/: MEMORY.md  project_1g_benchmarks.md  project_capsule_calibration.md  (+4 more)
python_v2/docs/: couette_design.md
python_v2/notebooks/: couette_T1.ipynb  getting_started.ipynb  phase8_adam_quench.ipynb  phase8_sequential_anneal.ipynb  reproduce_paper.ipynb
(+100 files in other folders)
