[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "epd-sim"
version = "0.1.0"
description = "EPD (Elastic Particle DEM) simulation — TF + C++ acceleration"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "tensorflow",
    "pybind11>=2.11",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src"]
